component videos ortopedicos

--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -142,11 +142,145 @@
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
+            <mat-expansion-panel (click)="changeVideoExpanded()" 
+            [expanded]="videoExpanded">
+                <mat-expansion-panel-header>
+                    <mat-panel-title i18n="Title">
+                        TESTES ORTOPÉDICOS - videos
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <mat-card>
+                    <mat-card-header routerLink="/video/testedeapley.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Apley</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Cancela.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Cancela</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Compressao Cervical e de Spurling.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Compressão Cervical e de Spurling</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/testedecompressaodasacroiliaca.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Compressão da Sacro Ilíaca</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Faber.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Faber</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Faber Plano2.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Faber - Plano 2</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header  routerLink="/video/Teste de Gaveta Posterior.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Gaveta Posterior</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Gaveta Anterior.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Gaveta Anterior</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Gerber.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Gerber</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Impingement.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste do Arco do Movimento</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Job.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Jobe</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Kemp.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Kemp</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Lasengue.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Lasengue</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Lelli.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Lelli</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Ober.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Ober</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Patte.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Patte</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Slump.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Slump</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Thomas">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Thomas</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Trendelenburg.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Trendelenburg</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Trust Sacral.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Thrust Sacral</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Yergason.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste de Yergason</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste de Napoleao.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste Napoleão</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste Neurodinamico do Nervo Femural.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste Neurodinâmico do Nervo Femural</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste Provocativo de Distracao.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste Provocativo de Distração</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/video/Teste Provocativo de Lesao do Labrum.mp4">
+                        <mat-card-subtitle i18n="Subtitle">Teste Provocativo de Lesão do Labrum</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+            </mat-expansion-panel>
         </mat-accordion>
 
     </div>
     <div class="footer">
-        <a mat-mini-fab color="primary" (click)="morfoExpanded=true; changeMorfoExpanded();" routerLink="/dash">
+        <a mat-mini-fab color="primary" (click)="morfoExpanded=true; changeMorfoExpanded(); videoExpanded=true; changeVideoExpanded();" routerLink="/dash">
             <mat-icon>home</mat-icon>
         </a>
     </div>
