--- a/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.scss
+++ b/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.scss
@@ -23,6 +23,9 @@
       padding: 0.5rem;
     }
   }
+  .metronomo-button{
+    margin-left: 50px;
+  }
   
   @media only screen and (min-width: 768px){
     .section-info{
