--- a/src/app/avaliation/evaluation/evaluation.component.html
+++ b/src/app/avaliation/evaluation/evaluation.component.html
@@ -9,9 +9,9 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                         </th>
-                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                         </th>
                         <th class="th-top" *ngIf="addEval">
                             <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data"
@@ -53,7 +53,7 @@
                         <td *ngIf="pointer>=0">{{evaluation[pointer].envergadura}}</td>
                         <td *ngIf="addEval">
                             <input name="envergadura" #envergadura="ngModel" [(ngModel)]="newEvaluation.envergadura"
-                                type="number" step="0.1">
+                                type="number" step="0.1" placeholder="cm">
                         </td>
                     </tr>
                     <tr>
@@ -79,8 +79,8 @@
                         <th>TMB - Taxa Metabólica<br />Basal <small>(kCal/dia)</small></th>
                         <td *ngIf="pointer>=1">{{calcTMB(evaluation[pointer-1])}}</td>
                         <td *ngIf="pointer>=0">{{calcTMB(evaluation[pointer])}}</td>
-                        <td *ngIf="addEval">&nbsp;
-                          <!--   <input name="fc" #fc="ngModel" [ngModel] [value]="calcTMB(newEvaluation)" readonly> -->
+                        <td *ngIf="addEval">
+                           <input name="fc" #fc="ngModel" [ngModel] [value]="calcTMB(newEvaluation)" readonly>
                         </td>
                     </tr>
                 </tbody>
