--- a/src/app/register/new/new.component.scss
+++ b/src/app/register/new/new.component.scss
@@ -35,6 +35,11 @@
     .new-form{
         width: 60%;
     }
+    
+    .mat-form-field-appearance-legacy .mat-form-field-label {
+        color: rgba(0,0,0,.94) !important;
+        font-size: normal !important; 
+      }
 
     ::-webkit-scrollbar {
         width: 0px;
