--- a/src/styles.scss
+++ b/src/styles.scss
@@ -145,6 +145,10 @@ td > input {
   font-size: medium !important; 
 }
 
+.data-input{
+  width: 125px;
+}
+
 @media only screen and (min-width: $min-width) {
   /* For desktop: */
   .container{
@@ -169,6 +173,9 @@ box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
     justify-content: flex-start;
     align-content: center;
   }
+
+
+
 
   ::-webkit-scrollbar {
     width: 0px;
